4.64

- Fixed: Stupid copy and paste error which broke asnyc aplayer update for missionProfileNamespace (player progress also gets saved when a player disconnects)