@@ -1,3 +1,4 @@
 4.64
 
 - Fixed: Stupid copy and paste error which broke asnyc aplayer update for missionProfileNamespace (player progress also gets saved when a player disconnects)
+- Fixed: Somehow code for saving and loading mission progress from missionProfileNamespace got lost resulting in messing up resolved targets array and deployed MHQ not working
